2013-09-11  Dmitry Antipov  <dmantipov@yandex.ru>

	* nsterm.m (syms_of_nsterm): Use Qns.
	* w32fns.c (Fx_open_connection): Remove old '#if 0' code.
	* w32term.c (w32_create_terminal, syms_of_w32term): Use Qw32.
	* xfns.c (x_display_info_for_name, Fx_open_connection):
	Remove old '#if 0' code.
	(syms_of_xfns): Use Qx.
	* termhooks.h (fullscreen_hook): Remove the leftover.
	(struct terminal): Fix typo in comment.

2013-09-11  Dmitry Antipov  <dmantipov@yandex.ru>

	Cleaning up a few X scroll bar bits.
	* termhooks.h (enum scroll_bar_part): Add scroll_bar_nowhere member.
	* xterm.h (struct scroll_bar) [USE_TOOLKIT_SCROLL_BARS && USE_LUCID]:
	New member last_seen_part, going to replace...
	* xterm.c [USE_TOOLKIT_SCROLL_BARS]: ...global last_scroll_bar_part.
	(xt_action_hook) [USE_LUCID]: Adjust user.
	(xm_scroll_callback, xg_scroll_callback): Do not bloat with
	Lucid-specific scroll bar support.
	(xaw_jump_callback, xaw_scroll_callback): Prefer enum scroll_par_part
	to int and adjust to use last_seen_part member.
	(x_set_toolkit_scroll_bar_thumb) [USE_LUCID]: Adjust user.
	(x_scroll_bar_create) [USE_TOOLKIT_SCROLL_BARS && USE_LUCID]:
	Initialize last_seen_part.

2013-09-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* insdel.c (insert_from_buffer_1): Don't mark buffer as modified when
	insert-buffer-substring an empty string.

2013-09-11  Paul Eggert  <eggert@cs.ucla.edu>

	* xdisp.c (Ftool_bar_lines_needed): Declare as 'const' if ifdeffed out,
	avoiding a GCC warning.

2013-09-11  Dmitry Antipov  <dmantipov@yandex.ru>

	Ifdef away frame tool bar code when it is not really used.
	* frame.h (struct frame) [HAVE_WINDOW_SYSTEM && !USE_GTK && !HAVE_NS]:
	Move tool_bar_window, desired_tool_bar_string, current_tool_bar_string
	and minimize_tool_bar_window_p under the above.
	(fset_current_tool_bar_string, fset_desired_tool_bar_string)
	(fset_tool_bar_window): Likewise.
	* dispnew.c (clear_current_matrices, clear_desired_matrices)